--- a/home/index.html
+++ b/home/index.html
@@ -32,7 +32,7 @@
           <button id="img_search_chara" onclick="location.href='../adventure'">探す</button>
         </div>
         <div id="img_menu_wrap">
-          <img id="img_menu" src="./images/menu.png">
+          <img id="img_menu" src="./images/menu.png" onclick="alert('coming soon...')">
         </div>
       </div>
   
