弁当箱追加

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -37,6 +37,7 @@
     <video src="" id="camera" class="camera" playsinline></video>
 
     <script src="./main.js" type="module"></script>
+    <script src="./usrcamera.js" type="module"></script>
     <link rel="stylesheet" href="./style.css">
 
   </body>
