背景画像を追加

--- a/home/index.html
+++ b/home/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
   
-      <!-- <script src="./main.js" type="module"></script> -->
+      <script src="./main.js" type="module"></script>
       <link rel="stylesheet" href="./style.css">
   
       <link rel="stylesheet" href="./grid.css">
