ローカルデータ処理を追加

--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -20,7 +20,7 @@
             </div>
             <div id="character-info">
                 <h2 id="character-name"></h2>
-                <p id="character-number"></p>
+                <p id="character-id"></p>
                 <p id="character-score"></p>
             </div>
         </section>
@@ -29,7 +29,7 @@
     <!-- 下部セクション -->
     <section id="card-container"></section>
     
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
