--- a/home/index.html
+++ b/home/index.html
@@ -24,7 +24,7 @@
       </div>
   
       <div id="img_completed_wrap">
-        <img id="img_completed" src="./images/completed.jpg" onclick="alert('coming soon...')">
+        <img id="img_completed" src="./images/completed.jpg" onclick="location.href='../dictionary'">
       </div>
   
       <div id="imgs_right_wrap">
