デザインの修正

--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -10,6 +10,7 @@
 <body>
     <!-- 上部セクション -->
     <div id="top-section">
+        <div id="BGrgba">
         <header>
             <h1>食べもの図鑑</h1>
             <a onclick="location.href='../home'">ホームへ</a>
@@ -24,6 +25,7 @@
                 <p id="character-score"></p>
             </div>
         </section>
+        </div>
     </div>
 
     <!-- 下部セクション -->
