--- a/home/index.html
+++ b/home/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-    />
-    <title>home</title>
 
-    <script type="importmap">
+<head>
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+  <title>home</title>
+
+  <script type="importmap">
       {
         "imports": {
           "three": "../three0.126/build/three.module.js",
@@ -15,31 +13,36 @@
         }
       }
     </script>
-  </head>
-  <body>
-    <button id="open_map" onclick="location.href='../map'">マップを開く</button>
-    <div id="grid_all">
-      <div id="canvas_wrap">
-        <canvas id="canvas" class="canvas"></canvas>
-      </div>
-  
-      <div id="img_completed_wrap">
-        <img id="img_completed" src="./images/completed.jpg" onclick="location.href='../dictionary'">
-      </div>
-  
-      <div id="imgs_right_wrap">
-        <div id="img_search_chara_wrap">
-          <button id="img_search_chara" onclick="location.href='../adventure'">探す</button>
-        </div>
-        <div id="img_menu_wrap">
-          <img id="img_menu" src="./images/menu.png" onclick="alert('coming soon...')">
-        </div>
-      </div>
-  
-      <script src="./main.js" type="module"></script>
-      <link rel="stylesheet" href="./style.css">
-  
-      <link rel="stylesheet" href="./grid.css">
+</head>
+
+<body>
+  <div id="grid_all">
+    <div id="canvas_wrap">
+      <canvas id="canvas" class="canvas"></canvas>
     </div>
-  </body>
+
+    <div id="img_left_wrap" class="img_buttons">
+      <img id="img_go_map" src="./images/go_map.png" onclick="location.href='../map'">
+      <img id="img_go_hatena" src="./images/go_hatena.png" onclick="alert('coming soon...')">
+    </div>
+
+    <div id="img_right_wrap" class="img_buttons">
+      <img id="img_go_ar" src="./images/go_ar.png" onclick="location.href='../adventure'">
+      <div id="img_menu_wrap">
+        <div id="img_suihanki_wrap">
+          <img id="img_go_suihanki" src="./images/go_suihannki.png" onclick="alert('coming soon...')">
+        </div>
+        <div id="img_dictionary_wrap">
+          <img id="img_go_dictionary" src="./images/go_dictionary.png" onclick="location.href='../dictionary'">  
+        </div>
+     </div>
+  </div>
+
+    <script src="./main.js" type="module"></script>
+    <link rel="stylesheet" href="./style.css">
+
+    <link rel="stylesheet" href="./grid.css">
+  </div>
+</body>
+
 </html>
