google maps のplace取得テストを追加

--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,8 @@
-<script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqZtiqPKGooqEoVvwW_x2CjyIIDYahlzw">
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqZtiqPKGooqEoVvwW_x2CjyIIDYahlzw&libraries=places">
 </script>
 
-<script type="module">
-const place1 = google.maps.LatLng(131.2703694, 33.9563051);
-// const apiKey = "AIzaSyCqZtiqPKGooqEoVvwW_x2CjyIIDYahlzw";
-// const location = {
-//     latitude: 131.2703694,
-//     longitude: 33.9563051
-// }
-// const url = `https://maps.googleapis.com/maps/api/place/nearbysearch/json?key=${apiKey}&language=ja&location=${location.latitude},${location.longitude}&rankby=distance`
 
-</script>
+<button id="get">Get places data</button>
+
+<script src="./main.js" type="module"></script>
