--- a/home/index.html
+++ b/home/index.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+  <div id="modal_overlay" class="modal">
+    <div id="modal_wrap">
+      <img id="modal_back_img" src="images_login_bonus/haikei.png">
+      <div id="modal_contents"></div>
+    </div>
+  </div>
+  
   <div id="grid_all">
     <div id="canvas_wrap">
       <canvas id="canvas" class="canvas"></canvas>
@@ -39,9 +46,11 @@
   </div>
 
     <script src="./main.js" type="module"></script>
+    <script src="./modal.js" type="module"></script>
     <link rel="stylesheet" href="./style.css">
 
     <link rel="stylesheet" href="./grid.css">
+    <link rel="stylesheet" href="./modal.css">
   </div>
 </body>
 
