[add]弁当箱の表示

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -18,6 +18,14 @@
   </head>
   <body>
     <button id="go_home" onclick="location.href='../home'">ホームへ</button>
+    <div id="lunchBox">
+      <img id="LBback" src="img/lunchBox_back.png">
+      <div id="LBcontents">
+        <!--この間に具材を入れると弁当箱に入る-->
+        <img src="../guzai_images/onigiri.png">
+      </div>
+      <img id="LBfront" src="img/lunchBox_front.png">
+    </div>
     
     <div id="device-orien-modal" class="device-orien-modal is-hidden">
       <div class="device-orien-modal-inner">
