スコアパネル追加

--- a/uitest/index.html
+++ b/uitest/index.html
@@ -8,8 +8,11 @@
     
 </head>
     <div id="card-list-wrapper"></div>
+    <div id="score-panel"></div>
+    
     <link rel="stylesheet" href="../componets/NewGuzaiData.css">
     <link rel="stylesheet" href="../componets/CardList.css">
+    <link rel="stylesheet" href="../componets/ScorePanel.css">
 
     <link rel="stylesheet" href="style-common.css">
 
