adventureに取得後のアニメーションを追加

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -44,8 +44,19 @@
     <canvas id="canvas" class="canvas"></canvas>
     <video src="" id="camera" class="camera" playsinline></video>
 
+
+    <!-- 取得時 -->
+    <div id="card-list-wrapper"></div>
+    <div id="score-panel"></div>
+    
+
     <script src="./main.js" type="module"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./post_collected.css">
+
+    <link rel="stylesheet" href="../componets/NewGuzaiData.css">
+    <link rel="stylesheet" href="../componets/CardList.css">
+    <link rel="stylesheet" href="../componets/ScorePanel.css">
 
   </body>
 </html>
