[fix]弁当箱関連のファイルをcomponetsに移動

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="../componets/NewGuzaiData.css">
     <link rel="stylesheet" href="../componets/CardList.css">
     <link rel="stylesheet" href="../componets/ScorePanel.css">
+    <link rel="stylesheet" href="../componets/LunchBox.css">
 
   </body>
 </html>
