[fix]canvasタグに変更

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -18,9 +18,7 @@
   </head>
   <body>
     <button id="go_home" onclick="location.href='../home'">ホームへ</button>
-    <div id="lunchBox">
-
-    </div>
+    <div id="lunchBox"></div>
     
     <div id="device-orien-modal" class="device-orien-modal is-hidden">
       <div class="device-orien-modal-inner">
