コンポーネントのCSS読み込みを自動化

--- a/home/index.html
+++ b/home/index.html
@@ -42,16 +42,18 @@
         <div id="img_dictionary_wrap">
           <img id="img_go_dictionary" src="./images/go_dictionary.png" onclick="location.href='../dictionary'">  
         </div>
-     </div>
+      </div>
+    </div>
+
   </div>
 
-    <script src="./main.js" type="module"></script>
-    <link rel="stylesheet" href="./style.css">
 
-    <link rel="stylesheet" href="./grid.css">
+  <div id="card-list-wrapper"></div>
 
-    <link rel="stylesheet" href="../componets/LoginModal.css">
-  </div>
+  <script src="./main.js" type="module"></script>
+  <link rel="stylesheet" href="./style.css">
+
+  <link rel="stylesheet" href="./grid.css">
 </body>
 
 </html>
