class canvas ->  id canvas

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -34,8 +34,8 @@
         </button>
       </div>
     </div>
-    <canvas id="canvas" class="canvas"></canvas>
-    <video src="" id="camera" class="camera" playsinline></video>
+    <canvas id="canvas"></canvas>
+    <video src="" id="camera" playsinline></video>
 
 
     <!-- 取得時 -->
