--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
   
   <div id="grid_all">
     <div id="canvas_wrap">
-      <canvas id="canvas" class="canvas"></canvas>
+      <canvas id="canvas"></canvas>
     </div>
 
     <div id="img_left_wrap" class="img_buttons">
