--- a/uitest/index.html
+++ b/uitest/index.html
@@ -8,12 +8,7 @@
     <title>uitest</title>
   </head>
   <body>
-    <div id="lunchBox_wrapper"></div>
-
-    <!-- 取得時 -->
-    <div id="card-list-wrapper"></div>
-    <div id="score-panel"></div>
-    
+    <div id="put-in-lunchbox-wrapper"></div>    
 
     <script src="./main.js" type="module"></script>
     <link rel="stylesheet" href="./style.css">
