adventureに弁当追加動作を追加

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -41,6 +41,7 @@
     <!-- 取得時 -->
     <div id="card-list-wrapper"></div>
     <div id="score-panel"></div>
+    <div id="put-in-lunchbox-wrapper"></div>
     
 
     <script src="./main.js" type="module"></script>
