無限白米を追加

--- a/home/index.html
+++ b/home/index.html
@@ -37,7 +37,7 @@
       <img id="img_go_ar" src="./images/go_ar.png" onclick="location.href='../adventure'">
       <div id="img_menu_wrap">
         <div id="img_suihanki_wrap">
-          <img id="img_go_suihanki" src="./images/go_suihannki.png" onclick="alert('coming soon...')">
+          <img id="img_go_suihanki" src="./images/go_suihannki.png" onclick="location.href='../rice_cooker'">
         </div>
         <div id="img_dictionary_wrap">
           <img id="img_go_dictionary" src="./images/go_dictionary.png" onclick="location.href='../dictionary'">  
