--- a/adventure/index.html
+++ b/adventure/index.html
@@ -20,7 +20,7 @@
     <button id="go_home" onclick="location.href='../home'">ホームへ</button>
     <div id="lunchBox_wrapper"></div>
     
-    <div id="device-orien-modal" class="device-orien-modal is-hidden">
+    <!-- <div id="device-orien-modal" class="device-orien-modal is-hidden">
       <div class="device-orien-modal-inner">
         <p>
           このページでは端末の向きと方向を取得します。<br />
@@ -33,7 +33,8 @@
           OK
         </button>
       </div>
-    </div>
+    </div> -->
+    <button id="device-orien-modal-bt">ここを押して権限を許可してください</button>
     <canvas id="canvas"></canvas>
     <video src="" id="camera" playsinline></video>
 
